--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "bootstrap": "4.6.0",
     "classnames": "^2.3.1",
+    "clsx": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.16.1",
+    "react-loading-skeleton": "^3.1.0",
     "react-notifications": "^1.7.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.3.0",
