--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "reactstrap": "8.9.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "sass": "^1.54.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
