--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dayjs": "^1.11.4",
     "query-string": "^7.1.1",
     "react": "^18.2.0",
+    "react-autocomplete": "^1.8.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.16.1",
     "react-loading-skeleton": "^3.1.0",
