--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "4.6.0",
+    "chart.js": "^3.8.0",
     "classnames": "^2.3.1",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.4",
     "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-autocomplete": "^1.8.1",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.16.1",
     "react-loading-skeleton": "^3.1.0",
