--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "classnames": "^2.3.1",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.4",
+    "dotenv": "^16.0.1",
+    "env-cmd": "^10.1.0",
     "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-autocomplete": "^1.8.1",
@@ -30,7 +32,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "env-cmd -f .env react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
