update build script and env variable

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-API_ENDPOINT=http://150.95.31.137:3200/api/
-#API_ENDPOINT=http://localhost/api/
+REACT_APP_API_ENDPOINT=http://150.95.31.137:3200/api/
+#REACT_APP_API_ENDPOINT=http://localhost/api/
